@@ -1,4 +1,5 @@
 1.6.0
+* Client: peer's send buffer made as a static circular buffer (with max size of 4MB)
 * Client: improved bandwidth statistics
 * New tool "bdb", for managing and deframenting the blocks database
 * Lib: check each new block for MAX_BLOCK_SIGOPS
